# PEPTAK

./: .gitattributes  .gitignore  CycPeptMPDB_Monomer_All.csv  CycPeptMPDB_Peptide_Assay_PAMPA.csv  README.md  pyproject.toml
.venv_test1/: pyvenv.cfg
.venv_test1/Scripts/: activate  activate.bat
scripts/: compute_gram.py  plot_evaluation.py
src/peptak/: cli.py  cv.py  data.py  gp.py  gram.py  init.py  kernels.py  metrics.py
tests/: test_data.py  test_gp.py  test_kernels.py
